# moldyn

./: README  graph.c
agl/: AGL for v.3.c  CMakeLists.txt  README  about.dox  agl.doxygen
agl/src/: Makefile  add_main.c  add_main.h  coords.c  main.c  messages.c  print_struct.c  read_agl.c  select_mol.c  set_center.c  set_center.h
agl_v3/: AGL for v.3.c  meth.txt
combine-qti/: combine-qti.py
dynamic-hb/: dynamic-hb.py
en_disp/: ca.txt  en_disp  en_disp.c  no.csv
envir/: CMakeLists.txt  README  about.dox  envir.c  envir.cmake  envir.doxygen
envir/src/: Makefile  (+12 more)
get_dipole/: get-dipole.py
graph/: graph  graph.c  graph.txt  graph_exm1.txt  graph_exm2.txt
hb-select/: hb-select.py
mathmech/: CHANGELOG  CMakeLists.txt  INSTALL  LICENSE  Makefile  PKGBUILD  PKGBUILD-mingw  README.doc  aboutwindow.cpp  aboutwindow.h  agglwindow.cpp  agglwindow.h  agglwindow.ui  aglallwindow.cpp  aglallwindow.h  aglallwindow.ui  atomtypeswindow.cpp  atomtypeswindow.ui  clear_items.cpp  clear_items.h  create_archive.sh  docs.cmake  doxygen.conf.in  errorwindow.cpp  errorwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mathmech  mathmech.cmake  mathmech.pro  moc_aboutwindow.cpp  moc_agglwindow.cpp  moc_aglallwindow.cpp  moc_atomtypeswindow.cpp  moc_clear_items.cpp  moc_errorwindow.cpp  moc_mainwindow.cpp  moc_settingswindow.cpp  (+24 more)
mathmech/agl/: CMakeLists.txt  README  agl.cmake
mathmech/agl/src/: add_main.c  add_main.h  main.c
mathmech/docs/eng/: help_agl.html  help_envir.html  help_radf.html  help_statgen.html  help_trj.html  help_trj2pdb.html
mathmech/docs/rus/: help_agl.html  help_envir.html  help_radf.html  help_statgen.html  help_trj.html  help_trj2pdb.html
mathmech/envir/: CMakeLists.txt  README  envir.cmake
mathmech/envir/src/: add_main.c  add_main.h  main.c
mathmech/mathmech/: CMakeLists.txt  INSTALL  README  mathmech.cmake  mathmech.desktop
mathmech/mathmech/resources/: res_icon.rc  resources.qrc
mathmech/mathmech/resources/translations/: eng.qm  eng.ts  rus.qm  rus.ts
mathmech/mathmech/src/: CMakeLists.txt  Makefile  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  agglwindow.cpp  agglwindow.h  agglwindow.ui  aglallwindow.cpp  aglallwindow.h  aglallwindow.ui  atomtypeswindow.cpp  atomtypeswindow.h  atomtypeswindow.ui  clear_items.cpp  clear_items.h  errorwindow.cpp  errorwindow.h  errorwindow.ui  helpwindow.cpp  helpwindow.h  helpwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mathmech.pro  settingswindow.cpp  settingswindow.h  settingswindow.ui  start_events.cpp  start_events.h  statgengraphwindow.cpp  statgengraphwindow.h  statgengraphwindow.ui  update_fields.cpp  update_fields.h
mathmech/mm/: CMakeLists.txt  README  doxygen.cmake  mm.cmake  mm.doxygen
mathmech/mm/include/mathmech/: atom_types.h  coords.h  envir_search.h  graph.h  messages.h  print_struct.h  print_trj.h  radf.h  radf_proc.h  read_agl.h  read_gmx.h  read_puma.h  select_mol.h  set_center.h  stat_print.h  stat_select.h  stat_sort.h  summary_stat.h  var_types.h
mathmech/mm/src/: CMakeLists.txt  atom_types.c  coords.c  envir_search.c  graph.c  main.c  messages.c  print_struct.c  print_trj.c  radf.c  radf_proc.c  read_agl.c  read_gmx.c  read_puma.c  select_mol.c  set_center.c  stat_print.c  stat_select.c  stat_sort.c  summary_stat.c
mathmech/mm_agl/: CMakeLists.txt  README  mm_agl.doxygen
mathmech/mm_agl/src/: CMakeLists.txt  Makefile  add_main.c  main.c  read_agl.c
mathmech/mm_envir/: CMakeLists.txt  README  mm_envir.doxygen
mathmech/mm_envir/src/: CMakeLists.txt  Makefile  add_main.h  envir_search.c  main.c  messages.c  messages.h
mathmech/mm_radf/: CMakeLists.txt  README  mm_radf.cmake  mm_radf.doxygen
mathmech/mm_radf/src/: add_main.c  coords.h  main.c
mathmech/mm_statgen/: CMakeLists.txt  README  mm_statgen.cmake  mm_statgen.doxygen
mathmech/mm_statgen/src/: add_main.c  main.c  messages.c  stat_print.c  stat_sort.c  stat_sort.h  summary_stat.c  summary_stat.h
mathmech/mm_trj/: CMakeLists.txt  README  mm_trj.doxygen
mathmech/mm_trj/src/: CMakeLists.txt  Makefile  main.c  read_gmx.h  read_puma.h
mathmech/mm_trj2pdb/: CMakeLists.txt  README  mm_trj2pdb.doxygen
mathmech/mm_trj2pdb/src/: CMakeLists.txt  add_main.h  main.c
mathmech/radf/: CMakeLists.txt  README
mathmech/radf/src/: add_main.c  add_main.h  main.c
mathmech/resources/translations/: eng.ts  rus.ts
mathmech/src/: CMakeLists.txt  Makefile  aboutwindow.h  aboutwindow.ui  aglallwindow.h  aglallwindow.ui  atomtypeswindow.h  mainwindow.cpp  mainwindow.ui  settingswindow.ui  start_events.cpp  update_fields.cpp
mathmech/statgen/: CMakeLists.txt  README  statgen.cmake
mathmech/statgen/src/: CMakeLists.txt  add_main.c  add_main.h  main.c
mathmech/trj/: CMakeLists.txt  README
mathmech/trj/src/: CMakeLists.txt  add_main.c  add_main.h  main.c
mathmech/trj2pdb/: CMakeLists.txt  INSTALL  README
mathmech/trj2pdb/src/: CMakeLists.txt  add_main.c  add_main.h  main.c
mm_agl/: CMakeLists.txt  README  mm_agl.doxygen
mm_envir/: mm_envir.doxygen
mm_radf/: CMakeLists.txt  README  mm_radf.doxygen
mm_statgen/: CMakeLists.txt  README  mm_statgen.cmake  mm_statgen.doxygen
mm_trj/: INSTALL  README
mm_trj2pdb/: mm_trj2pdb.doxygen
mol2rtp/: README  mol2rtp.c
radf/: CMakeLists.txt  README  radf.doxygen
stat/: STAT_GEN.c  stat_gen.ui
stat_new/: Makefile  coords  coords.c  main.c  stat  stat_print.c  stat_select.c  stat_sort.c  statgen  summary_stat.c
statgen/: CMakeLists.txt  CMakeLists_bckp.txt  Makefile  README  about.dox  add_main.c  coords.c  coords.h  graph.c  graph.h  int2str.c  main.c  messages.c  messages.h  oct-clb.001  oct.001  stat_print.c  stat_print.h  stat_select.c  stat_select.h  stat_sort.c  statgen  statgen-1.0.1.tar.xz  statgen.cmake  statgen.doxygen  summary_stat.c  summary_stat.h
statgen/include/statgen/: add_main.h  int2char.h  stat_sort.h
statgen/src/: CMakeLists.txt  Makefile  add_main.c  add_main.h  coords.c  graph.c  int2char.c  int2char.h  main.c  messages.c  stat_print.c  stat_select.c  stat_sort.c  summary_stat.c
xvg2csv/: xvg2csv.py
(+49 files in other folders)
